--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 				<p class="promo-title">BEST DIGITAL AGENCY</p>
 				<p>The following are the careers that a student of biology can plan to adopted after the higher secondary education in biolgy.</p>
 				<a href="#"><img src="images/play.png" class="play-btn">Watch Tutorials</a>
+				<h2>acode.pk will be updated soon</h2>
 			</div>
 			<div class="col-md-6 text-center">
 				<img src="images/home2.png" class="img-fluid">
