--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<p class="promo-title">BEST DIGITAL AGENCY</p>
+				<p class="promo-title">Hi I'm Bilal Afzal</p>
 				<p>The following are the careers that a student of biology can plan to adopted after the higher secondary education in biolgy.</p>
 				<a href="#"><img src="images/play.png" class="play-btn">Watch Tutorials</a>
 				<h2>acode.pk will be updated soon</h2>
