--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 		<div class="row">
 			<div class="col-md-6">
 				<p class="promo-title">Hi I'm Bilal Afzal</p>
-				<p>The following are the careers that a student of biology can plan to adopted after the higher secondary education in biolgy.</p>
+				<p>I am looking for an environment, where I may apply and utilize my knowledge to best of my abilities for development
+				and growth of my professional career on the baseof my integrity, honesty and hard working..</p>
 			</div>
 			<div class="col-md-6 text-center">
 				<img src="images/home2.png" class="img-fluid">
