--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <section id="nav-bar">
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#">acode.pk</a>
+  <a class="navbar-brand" href="#" style="margin-left: 20px; color: #fff; font-weight: 700;">acode.pk</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <i class="fa fa-bars"></i>
   </button>
