--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
 			<div class="col-md-4 services">
 				<img src="images/service1.png" class="service-img">
 				<h4>Web Development</h4>
-				<p>The following are the careers that a student of biology can plan to adopted after the higher secondary education in biolgy.</p>
+				<p>Web development involves creating and maintaining websites or web applications that can be accessed through web browsers.</p>
 			</div>
 			<div class="col-md-4 services">
 				<img src="images/service2.png" class="service-img">
 				<h4>Online Marketing</h4>
-				<p>The following are the careers that a student of biology can plan to adopted after the higher secondary education in biolgy.</p>
+				<p>Online marketing, also known as digital marketing, refers to the strategies and techniques used to promote products, services, or brands.</p>
 			</div>
 			<div class="col-md-4 services">
 				<img src="images/service3.png" class="service-img">
 				<h4>Graphics Designing</h4>
-				<p>The following are the careers that a student of biology can plan to adopted after the higher secondary education in biolgy.</p>
+				<p>Graphic designing is the art and practice of creating visual content using various elements such as images, typography, colors, and layout to convey messages, ideas, and information.</p>
 			</div>
 		</div>
 		<button type="button" class="btn btn-primary">All Services</button>
