--- a/index.html
+++ b/index.html
@@ -86,16 +86,15 @@
 		<h1 class="title text-center">CHOOSE US ?</h1>
 		<div class="row">
 			<div class="col-md-6 about-us">
-				<p class="about-title">Why We're different</p>
+				<p class="about-title">Experience & Skills</p>
 				<ul>
-					<li>Believe in doing Business with honesty</li>
-					<li>Believe in doing Business with honesty</li>
-					<li>Believe in doing Business with honesty</li>
-					<li>Believe in doing Business with honesty</li>
-					<li>Believe in doing Business with honesty</li>
-					<li>Believe in doing Business with honesty</li>
-					<li>Believe in doing Business with honesty</li>
-					<li>Believe in doing Business with honesty</li>
+					<li>3 Years Expereience in this Field</li>
+					<li>2.5 Years in Graphic Designing Includes</li>
+					<li>Corel Draw, Adobe Photoshop</li>
+					<li>I also know the basics of Ms-Excel | Ms-Word and a little bit Power point</li>
+					<li>5 Months in web development</li>
+					<li>I know HTML, CSS ,BOOTSTRAP</li>
+					<li>I create professional templates by using these languages.</li>
 				</ul>
 			</div>
 			<div class="col-md-6">
