--- a/index.html
+++ b/index.html
@@ -109,19 +109,9 @@
 		<h1 class="title text-center">OUR TEAM ?</h1>
 		<div class="row offset-1">
 			<div class="col-md-4 testimonials">
-				<p>The following are the careers that a student of biology can plan to adopted.</p>
-				<img src="images/ali.jpg">
-				<p class="user-details"><b>Ali Afzal</b></br>Web Developer</p>
-			</div>
-			<div class="col-md-4 testimonials">
-				<p>The following are the careers that a student of biology can plan to adopted.</p>
+				<p>My name is Bilal Afzal and I know how to work in this field.</p>
 				<img src="images/bilal.jpg">
-				<p class="user-details"><b>Bilal Afzal</b></br>Graphics Designer</p>
-			</div>
-			<div class="col-md-4 testimonials">
-				<p>The following are the careers that a student of biology can plan to adopted.</p>
-				<img src="images/adil.jpg">
-				<p class="user-details"><b>Sheharyar Azeem</b></br>Graphics Designer</p>
+				<p class="user-details"><b>Bilal Afzal</b></br>Graphic Designer</p>
 			</div>
 		</div>
 	</div>
