--- a/index.html
+++ b/index.html
@@ -136,15 +136,14 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4 footer-box">
-				<img src="images/demo-logo.png">
-				<p>The following are the careers that a student of biology can plan to adopted after the higher secondary edcuation in biology.
-				Hello World Nice to meet you.</p>
+				<a styl="margin-left: 20px; color: #fff; font-wieght: 600;">Acode.pk</a>
+				<p></p>
 			</div>
 			<div class="col-md-4 footer-box">
 				<p><b>CONTACT US</b></p>
 				<p><i class="fa fa-map-marker"></i>10 A-3 Habib Tower Valancia Town</p>
-				<p><i class="fa fa-phone"></i>+92 322 4355 410</p>
-				<p><i class="fa fa-envelope-o"></i>ablhr@gmail.com</p>
+				<p><i class="fa fa-phone"></i>+92 309 44 53 753</p>
+				<p><i class="fa fa-envelope-o"></i>mbilalafzalpak@gmail.com</p>
 			</div>
 			<div class="col-md-4 footer-box">
 				<p><b>SUBSCRIBE NEWSLETTER</b></p>
