--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		<h1 class="title text-center">OUR TEAM ?</h1>
 		<div class="row offset-1">
 			<div class="col-md-4 testimonials">
-				<p>My name is Bilal Afzal and I know how to work in this field.</p>
+				<p>Interested in discussing a project?</p>
 				<img src="images/bilal.jpg">
 				<p class="user-details"><b>Bilal Afzal</b></br>Graphic Designer</p>
 			</div>
