--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 			</div>
 		</div>
 		<hr>
-		<p class="copyright">&copy copyright www.acode.com All rights are Reserved</p>
+		<p class="copyright">&copy copyright www.acode.com All rights Reserved</p>
 	</div>
 </section>
 </body>
