--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
 		<div class="row">
 			<div class="col-md-4 footer-box">
 				<a style="color: #fff; font-wieght: 700;">Acode.pk</a>
-				<p>Let's build something great. with Us</p>
-				<p>Graphic Designing</p>
-				<p>UX Design Services</p>
-				<p>Social Media Marketing</p>
-				<p>Web Desiging</p>
+				<p>Let's build something great. with Us <br>Graphic Designing
+				UX Design Services <br>
+				Social Media Marketing <br>
+				Web Desiging
+				</p>
 			</div>
 			<div class="col-md-4 footer-box">
 				<p><b>CONTACT US</b></p>
